tests/ui/lang/control_flow/for_range_signed-broken.stderr
error: checked add is not supported yet
   --> $CORE_SRC/num/mod.rs:335:5
    |
335 | /     int_impl! {
336 | |         Self = i32,
337 | |         ActualT = i32,
338 | |         UnsignedT = u32,
...   |
353 | |         bound_condition = "",
354 | |     }
    | |_____^
    |
note: used from within `<i32>::overflowing_add`
   --> $CORE_SRC/num/mod.rs:335:5
    |
335 | /     int_impl! {
336 | |         Self = i32,
337 | |         ActualT = i32,
338 | |         UnsignedT = u32,
...   |
353 | |         bound_condition = "",
354 | |     }
    | |_____^
note: called by `<i32>::overflowing_add_unsigned`
   --> $CORE_SRC/num/mod.rs:335:5
    |
335 | /     int_impl! {
336 | |         Self = i32,
337 | |         ActualT = i32,
338 | |         UnsignedT = u32,
...   |
353 | |         bound_condition = "",
354 | |     }
    | |_____^
note: called by `<i32>::checked_add_unsigned`
   --> $CORE_SRC/num/mod.rs:335:5
    |
335 | /     int_impl! {
336 | |         Self = i32,
337 | |         ActualT = i32,
338 | |         UnsignedT = u32,
...   |
353 | |         bound_condition = "",
354 | |     }
    | |_____^
note: called by `<i32 as core::iter::range::Step>::forward_unchecked`
   --> $CORE_SRC/iter/range.rs:423:1
    |
423 | / step_integer_impls! {
424 | |     narrower than or same width as usize: [u8 i8], [u16 i16], [u32 i32], [usize isize];
425 | |     wider than usize: [u64 i64], [u128 i128];
426 | | }
    | |_^
note: called by `<core::ops::range::Range<i32> as core::iter::range::RangeIteratorImpl>::spec_next`
   --> $CORE_SRC/iter/range.rs:756:35
    |
756 |             self.start = unsafe { Step::forward_unchecked(old, 1) };
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `<core::ops::range::Range<i32> as core::iter::traits::iterator::Iterator>::next`
   --> $CORE_SRC/iter/range.rs:844:9
    |
844 |         self.spec_next()
    |         ^^^^^^^^^^^^^^^^
note: called by `for_range_signed_broken::main`
   --> $DIR/for_range_signed-broken.rs:12:14
    |
12  |     for _ in 0..i {}
    |              ^^^^
note: called by `main`
   --> $DIR/for_range_signed-broken.rs:11:8
    |
11  | pub fn main(#[spirv(flat)] i: i32) {
    |        ^^^^

error: aborting due to 1 previous error

